ansible/files/ocp/nova-cell/2/service-novncproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name nova-cell1-novncproxy
  labels:
    app: *name
  namespace: openstack
spec:
  ports:
  - name: novncproxy
    port: 6080
    protocol: TCP
  selector:
    app: *name
  type: ClusterIP
