ansible/files/ocp/nova-cell/2/route-novncproxy.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: &name nova-cell1-novncproxy
  namespace: openstack
spec:
  host: nova-cell1-novncproxy.apps.ostest.test.metalkube.org
  path: /
  to:
    kind: Service
    name: *name
  port:
    targetPort: novncproxy
